--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <h1>
   Brad Myers's Academic Tree
 </h1>
+<button onclick="expandAll()">Expand All</button>
+<button onclick="collapseAll()">Collapse All</button>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
