white text border

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <button onclick="collapseAll()">Collapse All</button>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="tree.js"></script>
 </body>
