left padding, html links

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <title>Brad Myer's Advisee Tree</title>
 
 <body>
+
+<div id="container">
 <h1>
   Brad Myers's Academic Tree
 </h1>
 
 <p>
-  At ACM CHI 2017 Brad Myer's was award the CHI Lifetime Achievement Award. 
+  At <a href="https://chi2017.acm.org/">ACM CHI 2017</a>, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was award the CHI Lifetime Achievement Award. 
   <br>
   In his keynote talk, he presented his advisee tree &mdash; all 6 generations!
 </p>
@@ -24,6 +26,7 @@
 <button onclick="expandAll()">Expand All</button>
 <button onclick="collapseAll()">Collapse All</button>
 <button onclick="expandOne()">Expand One</button>
+</div>
 
 <div id="tree"></div>
 
