--- a/index.html
+++ b/index.html
@@ -10,22 +10,29 @@
 
 <div id="container">
 <h1>
-  Brad Myers's Academic Tree
+  Brad Myers's Advisee Tree
 </h1>
 
 <p>
-  At <a href="https://chi2017.acm.org/">ACM CHI 2017</a>, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was award the CHI Lifetime Achievement Award. 
+  At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the CHI <a href="http://www.sigchi.org/about/awards/2017-sigchi-awards#brad-a-myers">Lifetime Research Award</a>. 
   <br>
-  In his keynote talk, he presented his advisee tree &mdash; all 6 generations!
+  In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>171</b> students!
 </p>
 
 <p>
-  <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">Data availble here.</a>
+  <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">Original hierarchal document</a> with affilitations, or <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">raw data availble.</a>
 </p>
 
+<p id="author">
+  <i>Design and implementation by <a href="http:/fredhohman.com">Fred Hohman</a> (generation 5).</i>
+</p>
+
+<span class="border">
 <button onclick="expandAll()">Expand All</button>
 <button onclick="collapseAll()">Collapse All</button>
 <button onclick="expandOne()">Expand One</button>
+</span>
+
 </div>
 
 <div id="tree"></div>
