--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </p>
 
 <p>
-  <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">Original hierarchal document</a> with affilitations, or <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">raw data availble.</a>
+  <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">Original hierarchal document</a> with affiliations, or <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">raw data available.</a>
 </p>
 
 <p id="author">
-  <i>Design and implementation by <a href="http:/fredhohman.com">Fred Hohman</a> (generation 5).</i>
+  <i>Design and implementation by <a href="http://fredhohman.com">Fred Hohman</a> (generation 5).</i>
 </p>
 
 <span class="border">
