expand and collapse by level works, but is buggy

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <button onclick="expandAll()">Expand All</button>
 <button onclick="collapseAll()">Collapse All</button>
 <button onclick="expandOne()">Expand One</button>
+<button onclick="collapseOne()">Collapse One</button>
 </span>
 
 </div>
