--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
 </p>
 
 <span class="border">
-<button onclick="expandAll()">Expand All</button>
-<button onclick="collapseAll()">Collapse All</button>
-<button onclick="expandOne()">Expand One</button>
-<button onclick="collapseOne()">Collapse One</button>
+  <button onclick="expandAll()">Expand All</button>
+  <button onclick="collapseAll()">Collapse All</button>
+  <button onclick="expandOne()">Expand One</button>
+  <button onclick="collapseOne()">Collapse One</button>
+  <br>
+  <br>
+  <button onclick="gen1()">Gen 1</button>
+  <button onclick="gen2()">Gen 2</button>
+  <button onclick="gen3()">Gen 3</button>
+  <button onclick="gen4()">Gen 4</button>
+  <button onclick="gen5()">Gen 5</button>
+  <button onclick="gen6()">Gen 6</button>
 </span>
 
 </div>
