--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </h1>
 
 <p>
-  At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="http://www.sigchi.org/about/awards/2017-sigchi-awards#brad-a-myers">CHI Lifetime Research Award</a>. 
+  At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="http://www.sigchi.org/about/awards/2017-sigchi-awards#brad-a-myers">CHI Lifetime Research Award</a>.
   <br>
   In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>172</b> students!
 </p>
@@ -34,12 +34,13 @@
   <button onclick="collapseOne()">Collapse One</button>
   <br>
   <br>
-  <button onclick="gen1()">Gen 1</button>
-  <button onclick="gen2()">Gen 2</button>
+  <button id="gen1b" onclick="gen1()">Gen 1</button>
+  <button id="gen2b" onclick="gen2()">Gen 2</button>
   <button onclick="gen3()">Gen 3</button>
   <button onclick="gen4()">Gen 4</button>
   <button onclick="gen5()">Gen 5</button>
   <button onclick="gen6()">Gen 6</button>
+  <button onclick="play()">Spiel</button>
 </span>
 
 </div>
