--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </p>
 
 <p id="author">
-  <i>Design and implementation by <a href="http://fredhohman.com">Fred Hohman</a> (generation 5).</i>
+  <i>Design and implementation by <a href="http://fredhohman.com">Fred Hohman</a> (generation 5), <a href="http://www.cc.gatech.edu/~rpienta3/">Robert Pienta</a> (generation 5), and <a href="http://www.cc.gatech.edu/~dchau/">Polo Chau</a> (generation 4).</i>
 </p>
 
 <span class="border">
@@ -34,12 +34,13 @@
   <button onclick="collapseOne()">Collapse One</button>
   <br>
   <br>
-  <button onclick="gen1()">Gen 1</button>
-  <button onclick="gen2()">Gen 2</button>
-  <button onclick="gen3()">Gen 3</button>
-  <button onclick="gen4()">Gen 4</button>
-  <button onclick="gen5()">Gen 5</button>
-  <button onclick="gen6()">Gen 6</button>
+  <span>Generation: </span>
+  <button onclick="gen1()">1</button>
+  <button onclick="gen2()">2</button>
+  <button onclick="gen3()">3</button>
+  <button onclick="gen4()">4</button>
+  <button onclick="gen5()">5</button>
+  <button onclick="gen6()">6</button>
 </span>
 
 </div>
