--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-  <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">Original hierarchal document</a> with affiliations, or <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">raw data available.</a>
+  The <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">original hierarchal document</a> with affiliations, or the <a href="http://www.github.com/fredhohman/brad-myers-academic-tree">raw data</a> is available.
 </p>
 
 <p id="author">
