--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-  The <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">original hierarchal document</a> with affiliations, and the <a href="https://github.com/fredhohman/brad-myers-advisee-tree/blob/master/data.csv">visualized data</a>, is available.
+  The <a href="https://docs.google.com/document/d/1NKheBhylXdkY_lmcV1QEP7CCLiwpMjE2L-KnWWh0Nvo/edit#heading=h.h4g51lbmhlnj">original hierarchical document</a> with affiliations, and the <a href="https://github.com/fredhohman/brad-myers-advisee-tree/blob/master/data.csv">visualized data</a>, are available.
 </p>
 
 <p id="author">
