--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </p>
 
 <p id="author">
-  <i>Design and implementation by <a href="http://fredhohman.com">Fred Hohman</a> (gen. 5), <a href="http://www.cc.gatech.edu/~rpienta3/">Robert Pienta</a> (gen. 5), and <a href="http://www.cc.gatech.edu/~dchau/">Polo Chau</a> (gen. 4).</i>
+  <i>Designed by <a href="http://fredhohman.com">Fred Hohman</a> (gen. 5), <a href="http://www.cc.gatech.edu/~rpienta3/">Robert Pienta</a> (gen. 5), and <a href="http://www.cc.gatech.edu/~dchau/">Polo Chau</a> (gen. 4).</i>
 </p>
 
 <span class="border">
