--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>
   At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="http://www.sigchi.org/about/awards/2017-sigchi-awards#brad-a-myers">CHI Lifetime Research Award</a>.
   <br>
-  In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>181</b> students!
+  In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>206</b> students! (updated Nov. 2018)
 </p>
 
 <p>
