--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ ga('send', 'pageview');
 </h1>
 
 <p>
-  At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="http://www.sigchi.org/about/awards/2017-sigchi-awards#brad-a-myers">CHI Lifetime Research Award</a>.
+  At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="https://sigchi.org/awards/sigchi-award-recipients/2017-sigchi-awards/#brad-a-myers">CHI Lifetime Research Award</a>.
   <br>
   In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>234</b> students! (updated Spring 2020)
 </p>
