--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ga('send', 'pageview');
 <p>
   At the <a href="https://chi2017.acm.org/">ACM CHI 2017</a> conference, <a href="http://www.cs.cmu.edu/~bam/">Brad Myers</a> was awarded the <a href="https://sigchi.org/awards/sigchi-award-recipients/2017-sigchi-awards/#brad-a-myers">CHI Lifetime Research Award</a>.
   <br>
-  In his keynote talk, he presented his advisee tree &mdash; all <b>6</b> generations, totaling <b>293</b> students! (updated Spring 2022)
+  In his keynote talk, he presented his advisee tree &mdash; all <b>7</b> generations, totaling <b>332</b> students! (updated Spring 2023)
 </p>
 
 <p>
@@ -48,6 +48,7 @@ ga('send', 'pageview');
   <button id="gen4button" onclick="gen4()">4</button>
   <button id="gen5button" onclick="gen5()">5</button>
   <button id="gen6button" onclick="gen6()">6</button>
+  <button id="gen7button" onclick="gen7()">7</button>
   <span><b>&nbsp;or&nbsp;</b></span>
   <button onclick="play()">Play&nbsp;<i class="fa fa-play" aria-hidden="true"></i>
 </button>
