--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href="./_app/immutable/entry/start.jT0sx2hG.js" rel="modulepreload">
-		<link href="./_app/immutable/chunks/Cjjfbk9K.js" rel="modulepreload">
+		<link href="./_app/immutable/entry/start.DqI-v5mS.js" rel="modulepreload">
+		<link href="./_app/immutable/chunks/DwWcmJJt.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/B91eMyfg.js" rel="modulepreload">
-		<link href="./_app/immutable/chunks/WzGDVpuU.js" rel="modulepreload">
+		<link href="./_app/immutable/chunks/BH5rAXuy.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/DAHuhkR-.js" rel="modulepreload">
-		<link href="./_app/immutable/entry/app.DjVPa74i.js" rel="modulepreload">
+		<link href="./_app/immutable/entry/app.D8YOwqM_.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/DN75dsob.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/DHdd-I9i.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/Dcal4tTR.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/Dur8by0w.js" rel="modulepreload">
 		<link href="./_app/immutable/nodes/0.iktGcoov.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/C3riTcCI.js" rel="modulepreload">
-		<link href="./_app/immutable/nodes/2.cPVKSpHR.js" rel="modulepreload">
+		<link href="./_app/immutable/nodes/2.BheIfYSL.js" rel="modulepreload">
 		<!--12qhfyh--><link rel="icon" href="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='107'%20height='128'%20viewBox='0%200%20107%20128'%3e%3ctitle%3esvelte-logo%3c/title%3e%3cpath%20d='M94.157%2022.819c-10.4-14.885-30.94-19.297-45.792-9.835L22.282%2029.608A29.92%2029.92%200%200%200%208.764%2049.65a31.5%2031.5%200%200%200%203.108%2020.231%2030%2030%200%200%200-4.477%2011.183%2031.9%2031.9%200%200%200%205.448%2024.116c10.402%2014.887%2030.942%2019.297%2045.791%209.835l26.083-16.624A29.92%2029.92%200%200%200%2098.235%2078.35a31.53%2031.53%200%200%200-3.105-20.232%2030%2030%200%200%200%204.474-11.182%2031.88%2031.88%200%200%200-5.447-24.116'%20style='fill:%23ff3e00'/%3e%3cpath%20d='M45.817%20106.582a20.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.503%2018%2018%200%200%201%20.624-2.435l.49-1.498%201.337.981a33.6%2033.6%200%200%200%2010.203%205.098l.97.294-.09.968a5.85%205.85%200%200%200%201.052%203.878%206.24%206.24%200%200%200%206.695%202.485%205.8%205.8%200%200%200%201.603-.704L69.27%2076.28a5.43%205.43%200%200%200%202.45-3.631%205.8%205.8%200%200%200-.987-4.371%206.24%206.24%200%200%200-6.698-2.487%205.7%205.7%200%200%200-1.6.704l-9.953%206.345a19%2019%200%200%201-5.296%202.326%2020.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.502%2017.99%2017.99%200%200%201%208.13-12.052l26.081-16.623a19%2019%200%200%201%205.3-2.329%2020.72%2020.72%200%200%201%2022.237%208.243%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-.624%202.435l-.49%201.498-1.337-.98a33.6%2033.6%200%200%200-10.203-5.1l-.97-.294.09-.968a5.86%205.86%200%200%200-1.052-3.878%206.24%206.24%200%200%200-6.696-2.485%205.8%205.8%200%200%200-1.602.704L37.73%2051.72a5.42%205.42%200%200%200-2.449%203.63%205.79%205.79%200%200%200%20.986%204.372%206.24%206.24%200%200%200%206.698%202.486%205.8%205.8%200%200%200%201.602-.704l9.952-6.342a19%2019%200%200%201%205.295-2.328%2020.72%2020.72%200%200%201%2022.237%208.242%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-8.13%2012.053l-26.081%2016.622a19%2019%200%200%201-5.3%202.328'%20style='fill:%23fff'/%3e%3c/svg%3e"/><!----><!--1uha8ag--><!----><title>Brad Myers's Advisee Tree</title>
 		<link href="./_app/immutable/assets/0.BlPPCHzM.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.6ob_YQZ9.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_bhh0eq = {
+					__sveltekit_1vgrcnx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/brad-myers-advisee-tree"
 					};
@@ -35,8 +35,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.jT0sx2hG.js"),
-						import("./_app/immutable/entry/app.DjVPa74i.js")
+						import("./_app/immutable/entry/start.DqI-v5mS.js"),
+						import("./_app/immutable/entry/app.D8YOwqM_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
