--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href="/brad-myers-advisee-tree/_app/immutable/entry/start.Dg5b1P9Q.js" rel="modulepreload">
-		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/Bcf4HW_j.js" rel="modulepreload">
+		<link href="/brad-myers-advisee-tree/_app/immutable/entry/start.uerTxWsL.js" rel="modulepreload">
+		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/BxvgUhnm.js" rel="modulepreload">
 		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/B91eMyfg.js" rel="modulepreload">
-		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/ZMmz0jgc.js" rel="modulepreload">
+		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/CtnCMrS0.js" rel="modulepreload">
 		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/DAHuhkR-.js" rel="modulepreload">
-		<link href="/brad-myers-advisee-tree/_app/immutable/entry/app.BQaU1R6x.js" rel="modulepreload">
+		<link href="/brad-myers-advisee-tree/_app/immutable/entry/app.ELLeOwRt.js" rel="modulepreload">
 		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/DN75dsob.js" rel="modulepreload">
 		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/DHdd-I9i.js" rel="modulepreload">
 		<link href="/brad-myers-advisee-tree/_app/immutable/chunks/Dcal4tTR.js" rel="modulepreload">
@@ -19,7 +19,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ijq3e9 = {
+					__sveltekit_9sn88m = {
 						base: "/brad-myers-advisee-tree",
 						assets: "/brad-myers-advisee-tree"
 					};
@@ -27,8 +27,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/brad-myers-advisee-tree/_app/immutable/entry/start.Dg5b1P9Q.js"),
-						import("/brad-myers-advisee-tree/_app/immutable/entry/app.BQaU1R6x.js")
+						import("/brad-myers-advisee-tree/_app/immutable/entry/start.uerTxWsL.js"),
+						import("/brad-myers-advisee-tree/_app/immutable/entry/app.ELLeOwRt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
